fix(button-card): add missing background colour

--- a/assets/components/src/button-card/style.scss
+++ b/assets/components/src/button-card/style.scss
@@ -6,6 +6,7 @@
 @import '~@wordpress/base-styles/colors';
 
 .newspack-button-card {
+	background: white;
 	border-radius: 3px;
 	border: 1px solid $gray-300;
 	box-shadow: inset 0 0 0 2px transparent;
